--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       </main>
 
       <!-- Footer (Optional) -->
-      <%# <%= render 'shared/footer' %> %>
+      <%# <%= render 'shared/footer' %>
     </div>
   </body>
 </html>
